tests/urmoac/input/wkt/errors/polygons_broken_id/sources.wkt
#id;pos;[var]
d;POLYGON((-240 -10, -260 -10, -260 10, -240 10, -240 -10))
